chore(under construction): only show under construction text when website is loaded in mobile or tablet view

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords"
     content="software engineering, software, human-computer interaction, software development, computer science, erik paluka, technology, development" />
   <meta name="author" content="Erik Paluka" />
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
 
@@ -84,7 +84,8 @@
 
 <body id="mainBody">
   <div id="mask"></div>
-  <div style="display: none">
+
+  <!-- <div style="display: none">
     <div id="menu">
       <ul>
         <li>
@@ -105,6 +106,12 @@
       </ul>
     </div>
     <div id="handle"></div>
+  </div> -->
+
+  <div id="underConstruction">
+    <p>Mobile and tablet view is currently under construction.</p>
+    <p>To see my website, load it on a laptop or desktop computer</p>
+    <p>with a wide enough screen</p>
   </div>
 
   <div class="container">
@@ -169,33 +176,38 @@
       </div>
       <div id="slider" class="nivoSlider">
         <a href="research/tandemtable/">
-          <img id="tllImg" src="img/TandemTable/TLL-mini.png" data-thumb="img/TandemTable/TLL.jpg" alt="TandemTable"
-            title="#TLLcaption" width="900" height="400" />
+          <img id="tllImg" src="https://erikpaluka.com/img/TandemTable/TLL-mini.png"
+            data-thumb="https://erikpaluka.com/img/TandemTable/TLL.jpg" alt="TandemTable" title="#TLLcaption"
+            width="900" height="400" />
         </a>
 
         <a href="research/off-screen-desktop/">
-          <img id="offScreenImg" src="img/off-screen-mini.png" data-thumb="img/off-screen.png" alt="Off-Screen Desktop"
-            title="#OffScreencaption" width="900" height="400" />
+          <img id="offScreenImg" src="https://erikpaluka.com/img/off-screen-mini.png"
+            data-thumb="https://erikpaluka.com/img/off-screen.png" alt="Off-Screen Desktop" title="#OffScreencaption"
+            width="900" height="400" />
         </a>
 
         <a href="research/affectvis/">
-          <img id="affectImg" src="img/edr-mini.jpg" data-thumb="img/edr-big.jpg" alt="Affective Computing Study"
-            title="#Affectcaption" width="900" height="400" />
+          <img id="affectImg" src="https://erikpaluka.com/img/edr-mini.jpg"
+            data-thumb="https://erikpaluka.com/img/edr-big.jpg" alt="Affective Computing Study" title="#Affectcaption"
+            width="900" height="400" />
         </a>
 
         <a href="research/percept/">
-          <img id="S3DImg" src="img/Perception-mini.png" data-thumb="img/Perception.jpg" alt="S3D Study"
-            title="#Perceptcaption" width="900" height="400" />
+          <img id="S3DImg" src="https://erikpaluka.com/img/Perception-mini.png"
+            data-thumb="https://erikpaluka.com/img/Perception.jpg" alt="S3D Study" title="#Perceptcaption" width="900"
+            height="400" />
         </a>
         <a href="research/smt/">
-          <img id="SMTImg" src="img/SMT/SMT-mini.png" data-thumb="img/SMT/SMT.jpg" alt="Simple Multi-Touch"
-            title="#SMTcaption" width="900" height="400" />
+          <img id="SMTImg" src="https://erikpaluka.com/img/SMT/SMT-mini.png"
+            data-thumb="https://erikpaluka.com/img/SMT/SMT.jpg" alt="Simple Multi-Touch" title="#SMTcaption" width="900"
+            height="400" />
         </a>
         <!-- <a href="projects/rayTracer/">
             <img
               id="rayImg"
-              src="img/raytracer-mini.png"
-              data-thumb="img/raytracer.jpg"
+              src="https://erikpaluka.com/img/raytracer-mini.png"
+              data-thumb="https://erikpaluka.com/img/raytracer.jpg"
               alt="Ray Tracer"
               title="#raycaption"
               width="900"
@@ -205,8 +217,8 @@
           <a href="projects/quakeVis/">
             <img
               id="qukImg"
-              src="img/quakeVis-mini.png"
-              data-thumb="img/quakeVis.jpg"
+              src="https://erikpaluka.com/img/quakeVis-mini.png"
+              data-thumb="https://erikpaluka.com/img/quakeVis.jpg"
               alt="QuakeVis"
               title="#quakecaption"
               width="900"
@@ -216,8 +228,8 @@
           <a href="projects/midpoint/">
             <img
               id="midImg"
-              src="img/midpoint-mini.png"
-              data-thumb="img/midpoint.jpg"
+              src="https://erikpaluka.com/img/midpoint-mini.png"
+              data-thumb="https://erikpaluka.com/img/midpoint.jpg"
               alt="Random Terrain Generation"
               title="#midpointcaption"
               width="900"
@@ -227,8 +239,8 @@
           <a href="projects/mouse-glove/">
             <img
               id="mogImg"
-              src="img/projects/glove/gloveSlider-mini.png"
-              data-thumb="img/projects/glove/gloveSlider.jpg"
+              src="https://erikpaluka.com/img/projects/glove/gloveSlider-mini.png"
+              data-thumb="https://erikpaluka.com/img/projects/glove/gloveSlider.jpg"
               alt="Mouse Glove Input Device"
               title="#glovecaption"
               width="900"
