--- a/research/smt/index.html
+++ b/research/smt/index.html
@@ -40,6 +40,12 @@
 </head>
 
 <body>
+  <div id="underConstruction">
+    <p>Mobile and tablet view is currently under construction.</p>
+    <p>To see my website, load it on a laptop or desktop computer</p>
+    <p>with a wide enough screen</p>
+  </div>
+
   <div class="container">
     <div class="socialIcons">
       <a href="https://github.com/paluka" target="_blank" title="GitHub"><img
@@ -128,7 +134,8 @@
       <br>You can download the toolkit and its source code on <a href="https://github.com/vialab/SMT"
         target="_blank"><img id="onGithub" src="../../img/socialIcons/github.png" alt="GitHub" width="56"
           height="25"></a> or <a href="https://vialab.ca/smt/download.php" target="_blank" title="SMT Website">SMT's
-        website</a>.</div>
+        website</a>.
+    </div>
 
     <div class="researchContent">
       <div class="researchSection center" style="margin-bottom:20px;">
