--- a/research/wall-of-gray/index.html
+++ b/research/wall-of-gray/index.html
@@ -36,6 +36,12 @@
 </head>
 
 <body>
+  <div id="underConstruction">
+    <p>Mobile and tablet view is currently under construction.</p>
+    <p>To see my website, load it on a laptop or desktop computer</p>
+    <p>with a wide enough screen</p>
+  </div>
+
   <div class="container">
     <div class="socialIcons">
       <a href="https://github.com/paluka" target="_blank" title="GitHub"><img
