--- a/images/index.html
+++ b/images/index.html
@@ -90,7 +90,8 @@
         <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'projects/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
         <a class="nav-item" itemprop="name" href="/publications/">Publications</a>
         <a class="nav-item" itemprop="name" href="/research/">Research</a>
-        <a class="nav-item" itemprop="name" href="/bio/">Bio</a>
+        <!-- <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a> -->
+
         <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'blog/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
         <!--<a <?php /*if (strpos($_SERVER['PHP_SELF'], 'algorithms/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';*/ ?> itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
