--- a/research/affectvis/index.html
+++ b/research/affectvis/index.html
@@ -89,7 +89,7 @@
         <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
         <a class="nav-item" itemprop="name" href="/publications/">Publications</a>
         <a class="nav-item" itemprop="name" href="/research/">Research</a>
-        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a>
+        <!-- <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a> -->
         <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
         <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
