--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     content="software engineering, software, human-computer interaction, software development, computer science, erik paluka, technology, development" />
   <meta name="author" content="Erik Paluka" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> -->
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
 
