chore(navigation): replace relative urls with absolute urls

--- a/images/index.html
+++ b/images/index.html
@@ -85,11 +85,11 @@
 
       <div class="navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
         <h2 class="hide">Site menu:</h2>
-        <a class="nav-item" itemprop="name" href="/contact/">Contact</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/contact/">Contact</a>
         <a class="nav-item-current" itemprop="name" href="https://erikpaluka.com/images/">Images</a>
         <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'projects/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
-        <a class="nav-item" itemprop="name" href="/publications/">Publications</a>
-        <a class="nav-item" itemprop="name" href="/research/">Research</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/publications/">Publications</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/research/">Research</a>
         <!-- <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a> -->
 
         <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'blog/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
