--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
 
       <div class="navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
         <h2 class="hide">Site menu:</h2>
-        <a class="nav-item" itemprop="name" href="/contact/">Contact</a>
-        <a class="nav-item" itemprop="name" href="/images/">Images</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/contact/">Contact</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/images/">Images</a>
         <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'projects/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
-        <a class="nav-item" itemprop="name" href="/publications/">Publications</a>
-        <a class="nav-item" itemprop="name" href="/research/">Research</a>
-        <!-- <a class="nav-item" itemprop="name" href="/bio/">Bio</a> -->
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/publications/">Publications</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/research/">Research</a>
+        <!-- <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a> -->
         <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'blog/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
         <!--<a <?php /*if (strpos($_SERVER['PHP_SELF'], 'algorithms/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';*/ ?> itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
@@ -176,35 +176,35 @@
         <div id="cover"></div>
       </div>
       <div id="slider" class="nivoSlider">
-        <a href="research/tandemtable/">
+        <a href="https://erikpaluka.com/research/tandemtable/">
           <img id="tllImg" src="https://erikpaluka.com/img/TandemTable/TLL-mini.png"
             data-thumb="https://erikpaluka.com/img/TandemTable/TLL.jpg" alt="TandemTable" title="#TLLcaption"
             width="900" height="400" />
         </a>
 
-        <a href="research/off-screen-desktop/">
+        <a href="https://erikpaluka.com/research/off-screen-desktop/">
           <img id="offScreenImg" src="https://erikpaluka.com/img/off-screen-mini.png"
             data-thumb="https://erikpaluka.com/img/off-screen.png" alt="Off-Screen Desktop" title="#OffScreencaption"
             width="900" height="400" />
         </a>
 
-        <a href="research/affectvis/">
+        <a href="https://erikpaluka.com/research/affectvis/">
           <img id="affectImg" src="https://erikpaluka.com/img/edr-mini.jpg"
             data-thumb="https://erikpaluka.com/img/edr-big.jpg" alt="Affective Computing Study" title="#Affectcaption"
             width="900" height="400" />
         </a>
 
-        <a href="research/percept/">
+        <a href="https://erikpaluka.com/research/percept/">
           <img id="S3DImg" src="https://erikpaluka.com/img/Perception-mini.png"
             data-thumb="https://erikpaluka.com/img/Perception.jpg" alt="S3D Study" title="#Perceptcaption" width="900"
             height="400" />
         </a>
-        <a href="research/smt/">
+        <a href="https://erikpaluka.com/research/smt/">
           <img id="SMTImg" src="https://erikpaluka.com/img/SMT/SMT-mini.png"
             data-thumb="https://erikpaluka.com/img/SMT/SMT.jpg" alt="Simple Multi-Touch" title="#SMTcaption" width="900"
             height="400" />
         </a>
-        <!-- <a href="projects/rayTracer/">
+        <!-- <a href="https://erikpaluka.com/projects/rayTracer/">
             <img
               id="rayImg"
               src="https://erikpaluka.com/img/raytracer-mini.png"
@@ -215,7 +215,7 @@
               height="400"
             />
           </a>
-          <a href="projects/quakeVis/">
+          <a href="https://erikpaluka.com/projects/quakeVis/">
             <img
               id="qukImg"
               src="https://erikpaluka.com/img/quakeVis-mini.png"
@@ -226,7 +226,7 @@
               height="400"
             />
           </a>
-          <a href="projects/midpoint/">
+          <a href="https://erikpaluka.com/projects/midpoint/">
             <img
               id="midImg"
               src="https://erikpaluka.com/img/midpoint-mini.png"
@@ -237,7 +237,7 @@
               height="400"
             />
           </a>
-          <a href="projects/mouse-glove/">
+          <a href="https://erikpaluka.com/projects/mouse-glove/">
             <img
               id="mogImg"
               src="https://erikpaluka.com/img/projects/glove/gloveSlider-mini.png"
@@ -251,39 +251,40 @@
       </div>
 
       <!-- <div id="glovecaption" class="nivo-html-caption">
-          <a href="projects/mouse-glove/">Mouse Glove Input Device</a>
+          <a href="https://erikpaluka.com/projects/mouse-glove/">Mouse Glove Input Device</a>
         </div> -->
 
       <div id="Affectcaption" class="nivo-html-caption">
-        <a href="research/affectvis/">Physiological (Affective) Study of Information Visualizations</a>
+        <a href="https://erikpaluka.com/research/affectvis/">Physiological (Affective) Study of Information
+          Visualizations</a>
       </div>
 
       <div id="Perceptcaption" class="nivo-html-caption">
-        <a href="research/percept/">Stereoscopic 3D Perception Study</a>
+        <a href="https://erikpaluka.com/research/percept/">Stereoscopic 3D Perception Study</a>
       </div>
       <!-- <div id="quakecaption" class="nivo-html-caption">
-          <a href="projects/quakeVis/"
+          <a href="https://erikpaluka.com/projects/quakeVis/"
             >Earthquake Visualization using real-time data</a
           >
         </div> -->
 
       <!-- <div id="midpointcaption" class="nivo-html-caption">
-          <a href="projects/midpoint/">Random Terrain Generation Experiment</a>
+          <a href="https://erikpaluka.com/projects/midpoint/">Random Terrain Generation Experiment</a>
         </div>
         <div id="raycaption" class="nivo-html-caption">
-          <a href="projects/rayTracer/">Ray Tracing Experiment</a>
+          <a href="https://erikpaluka.com/projects/rayTracer/">Ray Tracing Experiment</a>
         </div> -->
 
       <div id="SMTcaption" class="nivo-html-caption">
-        <a href="research/smt/">Simple Multi-Touch (SMT) Toolkit</a>
+        <a href="https://erikpaluka.com/research/smt/">Simple Multi-Touch (SMT) Toolkit</a>
       </div>
 
       <div id="OffScreencaption" class="nivo-html-caption">
-        <a href="research/off-screen-desktop/">Off-Screen Desktop &mdash; Master's Thesis</a>
+        <a href="https://erikpaluka.com/research/off-screen-desktop/">Off-Screen Desktop &mdash; Master's Thesis</a>
       </div>
 
       <div id="TLLcaption" class="nivo-html-caption">
-        <a href="research/tandemtable/">TandemTable &mdash; Honours Undergraduate Thesis</a>
+        <a href="https://erikpaluka.com/research/tandemtable/">TandemTable &mdash; Honours Undergraduate Thesis</a>
       </div>
     </div>
 
@@ -483,7 +484,7 @@
             <div class="NewsDate">03/2014</div>
             <div class="NewsText">
               Our
-              <a href="/research/percept/" target="_blank"
+              <a href="https://erikpaluka.com/research/percept/" target="_blank"
                 title="Evaluating the Perceived Relative Depth of Stereoscopically Rendered Two-Dimensional Shapes">stereoscopic
                 3D &#43; information visualization study</a>, was presented at the 2014 University of Ontario Institute
               of
