--- a/research/off-screen-desktop/index.html
+++ b/research/off-screen-desktop/index.html
@@ -88,11 +88,11 @@
 
       <div class="navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
         <h2 class="hide">Site menu:</h2>
-        <a class="nav-item" itemprop="name" href="/contact/">Contact</a>
-        <a class="nav-item" itemprop="name" href="/images/">Images</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/contact/">Contact</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/images/">Images</a>
         <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
-        <a class="nav-item" itemprop="name" href="/publications/">Publications</a>
-        <a class="nav-item" itemprop="name" href="/research/">Research</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/publications/">Publications</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/research/">Research</a>
         <!-- <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a> -->
         <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
         <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
