--- a/research/index.html
+++ b/research/index.html
@@ -8,7 +8,7 @@
     content="human-computer interaction, information visualization, computer science, erik paluka, technology, development" />
   <meta name="author" content="Erik Paluka" />
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> -->
 
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
