fix(smt): fix mobile font size being too big in header

--- a/research/smt/index.html
+++ b/research/smt/index.html
@@ -130,12 +130,12 @@
 
     </div>
 
-    <div class="center" style="margin-top:50px; margin-bottom: 20px;">Simple Multi-Touch (SMT) is open source and
-      licensed under <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank" title="GPL version 3">GPLv3</a>.
-      <br>You can download the toolkit and its source code on <a href="https://github.com/vialab/SMT"
-        target="_blank"><img id="onGithub" src="../../img/socialIcons/github.png" alt="GitHub" width="56"
-          height="25"></a> or <a href="https://vialab.ca/smt/download.php" target="_blank" title="SMT Website">SMT's
-        website</a>.
+    <div class="center" style="margin-top:50px; margin-bottom: 20px;">
+      Simple Multi-Touch (SMT) is open source and licensed under
+      <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank" title="GPL version 3">GPLv3</a>.
+      <br />
+      Download it here: <a href="https://github.com/vialab/SMT" target="_blank"><img id="onGithub"
+          src="../../img/socialIcons/github.png" alt="GitHub" width="56" height="25"></a>
     </div>
 
     <div class="researchContent">
