chore(TandemTable): fix mobile font size too large

--- a/research/tandemtable/index.html
+++ b/research/tandemtable/index.html
@@ -153,8 +153,9 @@
 
     <div class="center" style="margin-top: 50px; margin-bottom: 20px">
       TandemTable is open source and licensed under
-      <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank" title="GPL version 3">GPLv3</a>. <br />You can find
-      the source code on
+      <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank" title="GPL version 3">GPLv3</a>.
+      <br />
+      Download it here:
       <a href="https://github.com/paluka/TandemTable" target="_blank"><img id="onGithub"
           src="../../img/socialIcons/github.png" alt="GitHub" width="56" height="25" /></a>
     </div>
