fix(publications): fix too large space between pdf icon and link text in firefox

--- a/publications/index.html
+++ b/publications/index.html
@@ -106,7 +106,7 @@
 
       <div class="year">2016</div>
       <div class="publication">
-        <a href="../files/2016-SpatialVis.pdf" target="_blank" title="Download PDF">
+        <a href="../files/2016-SpatialVis.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
@@ -124,7 +124,7 @@
 
       <div class="year">2015</div>
       <div class="publication">
-        <a href="../files/2015-TandemTable.pdf" target="_blank" title="Download PDF">
+        <a href="../files/2015-TandemTable.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
@@ -141,7 +141,7 @@
       </div>
       <div class="year">2014</div>
       <div class="publication">
-        <a href="../files/2014-Reading-Comprehension.pdf" target="_blank" title="Download PDF">
+        <a href="../files/2014-Reading-Comprehension.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
@@ -158,7 +158,7 @@
       </div>
       <div class="year">2013</div>
       <div class="publication">
-        <a href="../files/2013-Augmenting-Tandem-Language.pdf" target="_blank" title="Download PDF">
+        <a href="../files/2013-Augmenting-Tandem-Language.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
@@ -198,7 +198,7 @@
 
       <div class="year">2015</div>
       <div class="publication">
-        <a href="../files/2015-Paluka-Master-Thesis.pdf" target="_blank" title="Download PDF">
+        <a href="../files/2015-Paluka-Master-Thesis.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
@@ -216,7 +216,7 @@
 
       <div class="year">2012</div>
       <div class="publication">
-        <a href="../files/2012-Paluka-Undergrad_Thesis.pdf" target="_blank" title="Download PDF">
+        <a href="../files/2012-Paluka-Undergrad_Thesis.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
@@ -237,7 +237,7 @@
 
       <div class="year">2016</div>
       <div class="publication">
-        <a href="../files/2016-Paluka-SimpleMulti-Touch.pdf" target="_blank" title="Download PDF">
+        <a href="../files/2016-Paluka-SimpleMulti-Touch.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
@@ -258,7 +258,7 @@
       <div class="pubType">Research Posters</div>
       <div class="year">2013</div>
       <div class="publication">
-        <a href="../files/Poster_TandemTable_ErikPaluka.pdf" target="_blank" title="Download PDF">
+        <a href="../files/Poster_TandemTable_ErikPaluka.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
@@ -275,7 +275,7 @@
       </div>
       <div class="year">2012</div>
       <div class="publication">
-        <a href="../files/Poster_LearningInTandem_ErikPaluka.pdf" target="_blank" title="Download PDF">
+        <a href="../files/Poster_LearningInTandem_ErikPaluka.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
@@ -292,7 +292,7 @@
       </div>
       <div class="year">2011</div>
       <div class="publication">
-        <a href="../files/Poster_SimpleMultiTouch_ErikPaluka.pdf" target="_blank" title="Download PDF">
+        <a href="../files/Poster_SimpleMultiTouch_ErikPaluka.pdf" target="_blank" title="Download PDF" class="dImgLink">
           <img class="dlImg" src="../img/pdf.png" width="25" height="25" border="0" alt="Download PDF" />
         </a>
 
