chore(header): remove anchor link tag from my name in header

--- a/contact/index.html
+++ b/contact/index.html
@@ -72,13 +72,13 @@
 
     <div id="nameHeader" itemscope itemtype="https://schema.org/Person">
       <div id="nameTitle">
-        <a href="https://erikpaluka.com/">
-          <span itemprop="name">Erik Paluka</span><span style="font-size: 50%">, M.Sc. in Computer Science</span>
+        <!-- <a href="https://erikpaluka.com/"> -->
+        <span itemprop="name">Erik Paluka</span><span style="font-size: 50%">, M.Sc. in Computer Science</span>
 
-          <p id="namePosition" itemprop="jobTitle">
-            Human-Computer Interaction &amp; Information Visualization
-          </p>
-        </a>
+        <p id="namePosition" itemprop="jobTitle">
+          Human-Computer Interaction &amp; Information Visualization
+        </p>
+        <!-- </a> -->
       </div>
 
       <div class="navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
