chore(news): remove link to palukatech website

--- a/index.html
+++ b/index.html
@@ -492,13 +492,7 @@
             <div class="NewsItem">
               <div class="NewsDate">05/2019</div>
               <div class="NewsText">
-                Founded my software consulting firm
-                <a
-                  href="https://palukatech.com/"
-                  target="_blank"
-                  title="PalukaTech"
-                  >PalukaTech</a
-                >.
+                Founded my software consulting firm called PalukaTech.
               </div>
               <div class="clear"></div>
             </div>
